<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movieFragment"
        android:title="@string/movie"
        android:icon="@drawable/ic_movies_24"/>

    <item
        android:id="@+id/tvShowFragment"
        android:title="@string/tvShow"
        android:icon="@drawable/ic_ltv_show_24"/>

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_24"/>
</menu>