<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie.FavMovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favMovie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/items_movie"
        tools:ignore="UnusedIds" />

</FrameLayout>